--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{padurean2024neural,
 title={{N}eural {T}ask {S}ynthesis for {V}isual {P}rogramming},
-author={Victor{-}Alexandru P{\u a}durean and Georgios Tzannetos and Adish Singla},
+author={Victor-Alexandru Padurean and Georgios Tzannetos and Adish Singla},
 journal={Transactions on Machine Learning Research ({TMLR})},
 Xissn={2835-8856},
 year={2024},
@@ -13,7 +13,7 @@ Xnote={}
 
 @inproceedings{DBLP:conf/lak/PhungPS0CGSS24,
   author       = {Tung Phung and
-                  Victor{-}Alexandru P{\u a}durean and
+                  Victor-Alexandru Padurean and
                   Anjali Singh and
                   Christopher Brooks and
                   Jos{\'{e}} Cambronero and
@@ -38,7 +38,7 @@ Xnote={}
 
 @inproceedings{DBLP:conf/lak/PhungPS0CGSS24,
   author       = {Tung Phung and
-                  Victor{-}Alexandru P{\u a}durean and
+                  Victor-Alexandru Padurean and
                   Anjali Singh and
                   Christopher Brooks and
                   Jos{\'{e}} Cambronero and
