--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@ journal={Transactions on Machine Learning Research ({TMLR})},
 Xissn={2835-8856},
 year={2024},
 Xurl={https://openreview.net/forum?id=aYkYajcJDN},
-Xnote={}
+Xnote={},
+selected={true},
 }
 
 @inproceedings{DBLP:conf/lak/PhungPS0CGSS24,
@@ -36,27 +37,16 @@ Xnote={}
   Xbibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/lak/PhungPS0CGSS24,
+@inproceedings{DBLP:journals/corr/abs-2306-17156,
   author       = {Tung Phung and
-                  Victor-Alexandru Padurean and
-                  Anjali Singh and
-                  Christopher Brooks and
+                  Victor{-}Alexandru Padurean and
                   Jos{\'{e}} Cambronero and
                   Sumit Gulwani and
+                  Tobias Kohn and
+                  Rupak Majumdar and
                   Adish Singla and
                   Gustavo Soares},
-  title        = {{A}utomating {H}uman {T}utor-{S}tyle {P}rogramming {F}eedback: {L}everaging {GPT-4}
-                  {T}utor {M}odel for {H}int {G}eneration and {GPT-3.5} {S}tudent {M}odel for {H}int
-                  {V}alidation},
-  Xbooktitle    = {Proceedings of the 14th Learning Analytics and Knowledge Conference,
-                  {LAK} 2024, Kyoto, Japan, March 18-22, 2024},
-  booktitle     = {Proceedings of the Learning Analytics and Knowledge Conference ({LAK})},
-  Xpages        = {12--23},
-  Xpublisher    = {{ACM}},
-  year         = {2024},
-  Xurl          = {https://doi.org/10.1145/3636555.3636846},
-  Xdoi          = {10.1145/3636555.3636846},
-  Xtimestamp    = {Mon, 01 Apr 2024 11:14:19 +0200},
-  Xbiburl       = {https://dblp.org/rec/conf/lak/PhungPS0CGSS24.bib},
-  Xbibsource    = {dblp computer science bibliography, https://dblp.org}
+  title        = {{G}enerative {AI} for {P}rogramming {E}ducation: {B}enchmarking {C}hatGPT, {G}PT-4, and {H}uman {T}utors},
+  booktitle     = {Proceedings of the Conference on International Computing Education Research ({ICER}) - Volume 2},
+  year         = {2023},
 }
