--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,18 +2,26 @@
 ---
 
 @article{padurean2024neural,
+abbr      = {TMLR},
+title     = {{N}eural {T}ask {S}ynthesis for {V}isual {P}rogramming},
+author    = {Victor-Alexandru Padurean and Georgios Tzannetos and Adish Singla},
+journal   = {Transactions on Machine Learning Research 2024 ({TMLR})},
+year      = {2024},
+paper     = {https://arxiv.org/abs/2305.18342},
+code      = {https://github.com/machine-teaching-group/tmlr2024_neurtasksyn},
+abstract  = {Generative neural models hold great promise in enhancing programming education by synthesizing new content. We seek to design neural models that can automatically generate programming tasks for a given specification in the context of visual programming domains. Despite the recent successes of large generative models like GPT-4, our initial results show that these models are ineffective in synthesizing visual programming tasks and struggle with logical and spatial reasoning. We propose a novel neuro-symbolic technique, NeurTaskSyn, that can synthesize programming tasks for a specification given in the form of desired programming concepts exercised by its solution code and constraints on the visual task. NeurTaskSyn has two components: the first component is trained via imitation learning procedure to generate possible solution codes, and the second component is trained via reinforcement learning procedure to guide an underlying symbolic execution engine that generates visual tasks for these codes. We demonstrate the effectiveness of NeurTaskSyn through an extensive empirical evaluation and a qualitative study on reference tasks taken from the Hour of Code: Classic Maze challenge by Code.org and the Intro to Programming with Karel course by CodeHS.com.},
+selected  = {true},
+bib       = {@article{padurean2024neural,
 title={{N}eural {T}ask {S}ynthesis for {V}isual {P}rogramming},
-author={Victor-Alexandru Padurean and Georgios Tzannetos and Adish Singla},
+author={Victor{-}Alexandru P{\u{a}}durean and Georgios Tzannetos and Adish Singla},
 journal={Transactions on Machine Learning Research ({TMLR})},
-Xissn={2835-8856},
-year={2024},
-Xurl={https://openreview.net/forum?id=aYkYajcJDN},
-Xnote={},
-selected={true},
+year={2024}
+}
 }
 
-@inproceedings{DBLP:conf/lak/PhungPS0CGSS24,
-  author       = {Tung Phung and
+@article{DBLP:conf/lak/PhungPS0CGSS24,
+  abbr          = {LAK},
+  author        = {Tung Phung and
                   Victor-Alexandru Padurean and
                   Anjali Singh and
                   Christopher Brooks and
@@ -21,25 +29,48 @@ selected={true},
                   Sumit Gulwani and
                   Adish Singla and
                   Gustavo Soares},
-  title        = {{A}utomating {H}uman {T}utor-{S}tyle {P}rogramming {F}eedback: {L}everaging {GPT-4}
+  title         = {{A}utomating {H}uman {T}utor-{S}tyle {P}rogramming {F}eedback: {L}everaging {GPT-4}
                   {T}utor {M}odel for {H}int {G}eneration and {GPT-3.5} {S}tudent {M}odel for {H}int
                   {V}alidation},
-  Xbooktitle    = {Proceedings of the 14th Learning Analytics and Knowledge Conference,
-                  {LAK} 2024, Kyoto, Japan, March 18-22, 2024},
+  journal     = {Proceedings of the Learning Analytics and Knowledge Conference 2024 ({LAK})},
+  year          = {2024},
+  paper         = {https://dl.acm.org/doi/10.1145/3636555.3636846},
+  abstract      = {Generative AI and large language models hold great promise in enhancing programming education by automatically generating individualized feedback for students. We investigate the role of generative AI models in providing human tutor-style programming hints to help students resolve errors in their buggy programs. Recent works have benchmarked state-of-the-art models for various feedback generation scenarios; however, their overall quality is still inferior to human tutors and not yet ready for real-world deployment. In this paper, we seek to push the limits of generative AI models toward providing high-quality programming hints and develop a novel technique, GPT4Hints-GPT3.5Val. As a first step, our technique leverages GPT-4 as a ``tutor'' model to generate hints -- it boosts the generative quality by using symbolic information of failing test cases and fixes in prompts. As a next step, our technique leverages GPT-3.5, a weaker model, as a ``student'' model to further validate the hint quality -- it performs an automatic quality validation by simulating the potential utility of providing this feedback. We show the efficacy of our technique via extensive evaluation using three real-world datasets of Python programs covering a variety of concepts ranging from basic algorithms to regular expressions and data analysis using pandas library.},
+  bib           = {@article{DBLP:conf/lak/PhungPS0CGSS24,
+  author        = {Tung Phung and
+                  Victor{-}Alexandru P{\u{a}}durean and
+                  Anjali Singh and
+                  Christopher Brooks and
+                  Jos{\'{e}} Cambronero and
+                  Sumit Gulwani and
+                  Adish Singla and
+                  Gustavo Soares},
+  title         = {{A}utomating {H}uman {T}utor-{S}tyle {P}rogramming {F}eedback: {L}everaging {GPT-4}
+                  {T}utor {M}odel for {H}int {G}eneration and {GPT-3.5} {S}tudent {M}odel for {H}int
+                  {V}alidation},
   booktitle     = {Proceedings of the Learning Analytics and Knowledge Conference ({LAK})},
-  Xpages        = {12--23},
-  Xpublisher    = {{ACM}},
-  year         = {2024},
-  Xurl          = {https://doi.org/10.1145/3636555.3636846},
-  Xdoi          = {10.1145/3636555.3636846},
-  Xtimestamp    = {Mon, 01 Apr 2024 11:14:19 +0200},
-  Xbiburl       = {https://dblp.org/rec/conf/lak/PhungPS0CGSS24.bib},
-  Xbibsource    = {dblp computer science bibliography, https://dblp.org}
+  year          = {2024}
+  }
 }
 
-@inproceedings{DBLP:journals/corr/abs-2306-17156,
+@article{DBLP:journals/corr/abs-2306-17156,
+  abbr          = {ICER},
   author       = {Tung Phung and
-                  Victor{-}Alexandru Padurean and
+                  Victor-Alexandru Padurean and
+                  Jos{\'{e}} Cambronero and
+                  Sumit Gulwani and
+                  Tobias Kohn and
+                  Rupak Majumdar and
+                  Adish Singla and
+                  Gustavo Soares},
+  title         = {{G}enerative {AI} for {P}rogramming {E}ducation: {B}enchmarking {C}hatGPT, {G}PT-4, and {H}uman {T}utors},
+  journal       = {Proceedings of the Conference on International Computing Education Research 2023 ({ICER}) - Volume 2},
+  year          = {2023},
+  paper         = {https://arxiv.org/abs/2306.17156},
+  abstract      = {Generative AI and large language models hold great promise in enhancing computing education by powering next-generation educational technologies for introductory programming. Recent works have studied these models for different scenarios relevant to programming education; however, these works are limited for several reasons, as they typically consider already outdated models or only specific scenario(s). Consequently, there is a lack of a systematic study that benchmarks state-of-the-art models for a comprehensive set of programming education scenarios. In our work, we systematically evaluate two models, ChatGPT (based on GPT-3.5) and GPT-4, and compare their performance with human tutors for a variety of scenarios. We evaluate using five introductory Python programming problems and real-world buggy programs from an online platform, and assess performance using expert-based annotations. Our results show that GPT-4 drastically outperforms ChatGPT (based on GPT-3.5) and comes close to human tutors' performance for several scenarios. These results also highlight settings where GPT-4 still struggles, providing exciting future directions on developing techniques to improve the performance of these models.},
+  bib           = {@article{DBLP:journals/corr/abs-2306-17156,
+  author        = {Tung Phung and
+                  Victor{-}Alexandru P{\u{a}}durean and
                   Jos{\'{e}} Cambronero and
                   Sumit Gulwani and
                   Tobias Kohn and
@@ -49,4 +80,5 @@ selected={true},
   title        = {{G}enerative {AI} for {P}rogramming {E}ducation: {B}enchmarking {C}hatGPT, {G}PT-4, and {H}uman {T}utors},
   booktitle     = {Proceedings of the Conference on International Computing Education Research ({ICER}) - Volume 2},
   year         = {2023},
+}
 }
