--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,11 +11,11 @@ abstract  = {Generative models have demonstrated human-level proficiency in vari
 selected  = {true}
 }
 
-@article{padurean2024bugspotter,
+@article{padurean2025bugspotter,
 abbr      = {SIGCSE},
 title     = {{BugSpotter}: {A}utomated {G}eneration of {C}ode {D}ebugging {E}xercises},
 author    = {Victor-Alexandru Padurean and Paul Denny and Adish Singla},
-journal   = {Proceedings of Technical Symposium on Computer Science Education {(SIGCSE)}},
+journal   = {Proceedings of the Technical Symposium on Computer Science Education {(SIGCSE)}},
 year      = {2025},
 note      = {to appear},
 abstract  = {Debugging is an essential yet often under-emphasized skill in programming education. In the era of code-generating large language models (LLMs), the ability for students to reason about code and identify errors is increasingly important. However, students frequently resort to trial-and-error methods to resolve bugs without truly understanding the underlying issues. Developing the ability to identify and hypothesize the cause of bugs is crucial but can be time-consuming to teach effectively through traditional means. This paper introduces BugSpotter, an innovative tool that leverages an LLM to generate buggy code from a problem description and verifies the synthesized bugs via a test suite. Students interact with BugSpotter by designing failing test cases, where the buggy code's output differs from the expected result as defined by the problem specification. This not only provides opportunities for students to enhance their debugging skills, but also to practice reading and understanding problem specifications. We deployed BugSpotter in a large classroom setting and compared the debugging exercises it generated to exercises hand-crafted by an instructor for the same problems. We found that the LLM-generated exercises produced by BugSpotter varied in difficulty and were well-matched to the problem specifications. Importantly, the LLM-generated exercises were comparable to those manually created by instructors with respect to student performance, suggesting that BugSpotter could be an effective and efficient aid for learning debugging.},
