--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@ selected  = {true}
 abbr      = {TMLR},
 title     = {{N}eural {T}ask {S}ynthesis for {V}isual {P}rogramming},
 author    = {Victor-Alexandru Padurean and Georgios Tzannetos and Adish Singla},
-journal   = {Transactions on Machine Learning Research 2024 ({TMLR})},
+journal   = {Transactions on Machine Learning Research ({TMLR})},
 year      = {2024},
 paper     = {https://arxiv.org/abs/2305.18342},
 code      = {https://github.com/machine-teaching-group/tmlr2024_neurtasksyn},
