--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@ selected  = {true}
   title         = {{A}utomating {H}uman {T}utor-{S}tyle {P}rogramming {F}eedback: {L}everaging {GPT-4}
                   {T}utor {M}odel for {H}int {G}eneration and {GPT-3.5} {S}tudent {M}odel for {H}int
                   {V}alidation},
-  journal     = {Proceedings of the Learning Analytics and Knowledge Conference 2024 ({LAK})},
+  journal     = {Proceedings of the Learning Analytics and Knowledge Conference ({LAK})},
   year          = {2024},
   paper         = {https://dl.acm.org/doi/10.1145/3636555.3636846},
   abstract      = {Generative AI and large language models hold great promise in enhancing programming education by automatically generating individualized feedback for students. We investigate the role of generative AI models in providing human tutor-style programming hints to help students resolve errors in their buggy programs. Recent works have benchmarked state-of-the-art models for various feedback generation scenarios; however, their overall quality is still inferior to human tutors and not yet ready for real-world deployment. In this paper, we seek to push the limits of generative AI models toward providing high-quality programming hints and develop a novel technique, GPT4Hints-GPT3.5Val. As a first step, our technique leverages GPT-4 as a ``tutor'' model to generate hints -- it boosts the generative quality by using symbolic information of failing test cases and fixes in prompts. As a next step, our technique leverages GPT-3.5, a weaker model, as a ``student'' model to further validate the hint quality -- it performs an automatic quality validation by simulating the potential utility of providing this feedback. We show the efficacy of our technique via extensive evaluation using three real-world datasets of Python programs covering a variety of concepts ranging from basic algorithms to regular expressions and data analysis using pandas library.},
@@ -64,7 +64,7 @@ selected  = {true}
                   Adish Singla and
                   Gustavo Soares},
   title         = {{G}enerative {AI} for {P}rogramming {E}ducation: {B}enchmarking {C}hatGPT, {G}PT-4, and {H}uman {T}utors},
-  journal       = {Proceedings of the Conference on International Computing Education Research 2023 ({ICER}) - Volume 2},
+  journal       = {Proceedings of the Conference on International Computing Education Research ({ICER}) - Volume 2},
   year          = {2023},
   paper         = {https://arxiv.org/abs/2306.17156},
   abstract      = {Generative AI and large language models hold great promise in enhancing computing education by powering next-generation educational technologies for introductory programming. Recent works have studied these models for different scenarios relevant to programming education; however, these works are limited for several reasons, as they typically consider already outdated models or only specific scenario(s). Consequently, there is a lack of a systematic study that benchmarks state-of-the-art models for a comprehensive set of programming education scenarios. In our work, we systematically evaluate two models, ChatGPT (based on GPT-3.5) and GPT-4, and compare their performance with human tutors for a variety of scenarios. We evaluate using five introductory Python programming problems and real-world buggy programs from an online platform, and assess performance using expert-based annotations. Our results show that GPT-4 drastically outperforms ChatGPT (based on GPT-3.5) and comes close to human tutors' performance for several scenarios. These results also highlight settings where GPT-4 still struggles, providing exciting future directions on developing techniques to improve the performance of these models.}
