--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@article{rawal2025hints,
+abbr      = {ICSE},
+title     = {{H}ints {H}elp {F}inding and {F}ixing {B}ugs {D}ifferently in {P}ython and {T}ext-based {P}rogram {R}epresentations},
+author    = {Ruchit Rawal and Victor-Alexandru Padurean and Sven Apel and Adish Singla and Mariya Toneva},
+journal   = {Proceedings of the International Conference on Software Engineering ({ICSE})},
+year      = {2025},
+paper     = {https://arxiv.org/abs/2412.12471},
+arxiv     = {2412.12471},
+abstract  = {With the recent advances in AI programming assistants such as GitHub Copilot, programming is not limited to classical programming languages anymore--programming tasks can also be expressed and solved by end-users in natural text. Despite the availability of this new programming modality, users still face difficulties with algorithmic understanding and program debugging. One promising approach to support end-users is to provide hints to help them find and fix bugs while forming and improving their programming capabilities. While it is plausible that hints can help, it is unclear which type of hint is helpful and how this depends on program representations (classic source code or a textual representation) and the user's capability of understanding the algorithmic task. To understand the role of hints in this space, we conduct a large-scale crowd-sourced study involving 753 participants investigating the effect of three types of hints (test cases, conceptual, and detailed), across two program representations (Python and text-based), and two groups of users (with clear understanding or confusion about the algorithmic task). We find that the program representation (Python vs. text) has a significant influence on the users' accuracy at finding and fixing bugs. Surprisingly, users are more accurate at finding and fixing bugs when they see the program in natural text. Hints are generally helpful in improving accuracy, but different hints help differently depending on the program representation and the user's understanding of the algorithmic task. These findings have implications for designing next-generation programming tools that provide personalized support to users, for example, by adapting the programming modality and providing hints with respect to the user's skill level and understanding.},
+}
+
 @article{padurean2024benchmarking,
 abbr      = {NeurIPS D\&B},
 title     = {{B}enchmarking {G}enerative {M}odels on {C}omputational {T}hinking {T}ests in {E}lementary {V}isual {P}rogramming},
@@ -18,6 +29,9 @@ title     = {{BugSpotter}: {A}utomated {G}eneration of {C}ode {D}ebugging {E}xer
 author    = {Victor-Alexandru Padurean and Paul Denny and Adish Singla},
 journal   = {Proceedings of the Technical Symposium on Computer Science Education {(SIGCSE)}},
 year      = {2025},
+paper     = {https://arxiv.org/pdf/2411.14303},
+arxiv     = {2411.14303},
+website   = {https://bugspotter.netlify.app},
 note      = {to appear},
 abstract  = {Debugging is an essential yet often under-emphasized skill in programming education. In the era of code-generating large language models (LLMs), the ability for students to reason about code and identify errors is increasingly important. However, students frequently resort to trial-and-error methods to resolve bugs without truly understanding the underlying issues. Developing the ability to identify and hypothesize the cause of bugs is crucial but can be time-consuming to teach effectively through traditional means. This paper introduces BugSpotter, an innovative tool that leverages an LLM to generate buggy code from a problem description and verifies the synthesized bugs via a test suite. Students interact with BugSpotter by designing failing test cases, where the buggy code's output differs from the expected result as defined by the problem specification. This not only provides opportunities for students to enhance their debugging skills, but also to practice reading and understanding problem specifications. We deployed BugSpotter in a large classroom setting and compared the debugging exercises it generated to exercises hand-crafted by an instructor for the same problems. We found that the LLM-generated exercises produced by BugSpotter varied in difficulty and were well-matched to the problem specifications. Importantly, the LLM-generated exercises were comparable to those manually created by instructors with respect to student performance, suggesting that BugSpotter could be an effective and efficient aid for learning debugging.},
 selected  = {true}
