--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,8 @@ title     = {{H}ints {H}elp {F}inding and {F}ixing {B}ugs {D}ifferently in {P}yt
 author    = {Ruchit Rawal and Victor-Alexandru Padurean and Sven Apel and Adish Singla and Mariya Toneva},
 journal   = {Proceedings of the International Conference on Software Engineering ({ICSE})},
 year      = {2025},
+pages     = {1230--1242},
+doi       = {10.1109/ICSE55347.2025.00192},
 paper     = {https://arxiv.org/abs/2412.12471},
 arxiv     = {2412.12471},
 note      = {to appear},
@@ -30,12 +32,67 @@ title     = {{BugSpotter}: {A}utomated {G}eneration of {C}ode {D}ebugging {E}xer
 author    = {Victor-Alexandru Padurean and Paul Denny and Adish Singla},
 journal   = {Proceedings of the Technical Symposium on Computer Science Education {(SIGCSE)}},
 year      = {2025},
+pages     = {896--902},
+doi       = {10.1145/3641554.3701974},
 paper     = {https://arxiv.org/pdf/2411.14303},
 arxiv     = {2411.14303},
 website   = {https://bugspotter.netlify.app},
 note      = {to appear},
 abstract  = {Debugging is an essential yet often under-emphasized skill in programming education. In the era of code-generating large language models (LLMs), the ability for students to reason about code and identify errors is increasingly important. However, students frequently resort to trial-and-error methods to resolve bugs without truly understanding the underlying issues. Developing the ability to identify and hypothesize the cause of bugs is crucial but can be time-consuming to teach effectively through traditional means. This paper introduces BugSpotter, an innovative tool that leverages an LLM to generate buggy code from a problem description and verifies the synthesized bugs via a test suite. Students interact with BugSpotter by designing failing test cases, where the buggy code's output differs from the expected result as defined by the problem specification. This not only provides opportunities for students to enhance their debugging skills, but also to practice reading and understanding problem specifications. We deployed BugSpotter in a large classroom setting and compared the debugging exercises it generated to exercises hand-crafted by an instructor for the same problems. We found that the LLM-generated exercises produced by BugSpotter varied in difficulty and were well-matched to the problem specifications. Importantly, the LLM-generated exercises were comparable to those manually created by instructors with respect to student performance, suggesting that BugSpotter could be an effective and efficient aid for learning debugging.},
 selected  = {true}
+}
+
+@article{DBLP:conf/iticse/Padurean0GS25,
+abbr      = {ITiCSE},
+title     = {{P}rompt {P}rogramming: {A} {P}latform for {D}ialogue-based {C}omputational {P}roblem {S}olving with {G}enerative {AI} {M}odels},
+author    = {Victor{-}Alexandru Padurean and
+             Paul Denny and
+             Alkis Gotovos and
+             Adish Singla},
+journal   = {Proceedings of the 30th {ACM} Conference on Innovation and Technology in Computer Science Education V. 1 ({ITiCSE})},
+year      = {2025},
+pages     = {458--464},
+publisher = {{ACM}},
+doi       = {10.1145/3724363.3729094},
+paper     = {https://doi.org/10.1145/3724363.3729094},
+arxiv     = {2503.04267},
+website   = {https://www.promptprogram.org},
+}
+
+@article{DBLP:conf/edm/PadureanPKL00S25,
+abbr      = {EDM},
+title     = {{H}umanizing {A}utomated {P}rogramming {F}eedback: {F}ine-{T}uning {G}enerative {M}odels with {S}tudent-{W}ritten {F}eedback},
+author    = {Victor{-}Alexandru Padurean and
+             Tung Phung and
+             Nachiket Kotalwar and
+             Michael Liut and
+             Juho Leinonen and
+             Paul Denny and
+             Adish Singla},
+journal   = {Proceedings of the 18th International Conference on Educational Data Mining ({EDM})},
+year      = {2025},
+publisher = {International Educational Data Mining Society},
+paper     = {https://educationaldatamining.org/2025.EDM.short-papers.35/index.html},
+arxiv     = {2509.10647},
+}
+
+@article{DBLP:conf/aied/NguyenPGTS25,
+abbr      = {AIED},
+title     = {{S}ynthesizing {H}igh-{Q}uality {P}rogramming {T}asks with {LLM}-{B}ased {E}xpert and {S}tudent {A}gents},
+author    = {Manh Hung Nguyen and
+             Victor{-}Alexandru Padurean and
+             Alkis Gotovos and
+             Sebastian Tschiatschek and
+             Adish Singla},
+journal   = {Artificial Intelligence in Education - 26th International Conference ({AIED}) 2025, Palermo, Italy, July 22-26, 2025, Proceedings, Part {I}},
+series    = {Lecture Notes in Computer Science},
+volume    = {15877},
+pages     = {77--91},
+publisher = {Springer},
+year      = {2025},
+doi       = {10.1007/978-3-031-98414-3_6},
+paper     = {https://doi.org/10.1007/978-3-031-98414-3_6},
+arxiv     = {2504.07655},
 }
 
 @article{padurean2024neural,
