--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,8 @@ pages     = {458--464},
 doi       = {10.1145/3724363.3729094},
 paper     = {https://doi.org/10.1145/3724363.3729094},
 abstract  = {Computing students increasingly rely on generative AI tools for programming assistance, often without formal instruction or guidance. This highlights a need to teach students how to effectively interact with AI models, particularly through natural language prompts, to generate and critically evaluate code for solving computational tasks. To address this, we developed a novel platform for prompt programming that enables authentic dialogue-based interactions, supports problems involving multiple interdependent functions, and offers on-request execution of generated code. Data analysis from over 900 students in an introductory programming course revealed high engagement, with the majority of prompts occurring within multi-turn dialogues. Problems with multiple interdependent functions encouraged iterative refinement, with progression graphs highlighting several common strategies. Students were highly selective about the code they chose to test, suggesting that on-request execution of generated code promoted critical thinking. Given the growing importance of learning dialogue-based programming with AI, we provide this tool as a publicly accessible resource, accompanied by a corpus of programming problems for educational use.},
+website   = {https://www.promptprogram.org},
+selected  = {true}
 }
 
 
